--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,8 +20,20 @@ html {
    background-color: #f4f1ec;
    font-size: 24px;
    font-family: 'Source Sans Pro', sans-serif;
+   align-items: center;
+   justify-content: center;
   }
+ 
+  .container {
+  width: 90%;
+  margin: auto;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4f1ec;
 
+  }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
