--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,11 +5,13 @@ nav {
   background-color: #005bdb;
   padding: 0px 1.5em;
   display: flex;
-  justify-content: space-between 
+  justify-content: space-between;
+  position: fixed;
+  top: 0
+
  }
- .tweeter {
+.tweeter {
   font-family: 'Bungee', cursive; 
-  font-size: 24px;
   display: flex; 
   align-items: center 
  }
@@ -19,11 +21,11 @@ nav {
   justify-content: center; 
 
 }
- .newTweet {
+.newTweet {
    font-family: 'Source Sans Pro', sans-serif;
    display: flex
   }
-  .angledDoubleDown {
+.fas {
     color: red;
     display: flex;
     justify-content: center
