--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,11 +1,12 @@
 .new-tweet {
 display: flex;
-
+flex-direction: column;
+margin-bottom: 50px;
 }
 textarea {
   border: 0;
   background: transparent;
-  width: 600px;
+  width: 800px;
   height: 60px;
   padding: 15px;
   border-bottom: 1px solid rgba(7, 7, 7, 0.918);
@@ -20,6 +21,8 @@ textarea {
 }
 button{
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   font-family: 'Bungee', cursive;
   background-color: #005bdb;
   color: white
@@ -27,6 +30,99 @@ button{
 }
 .counter{
   display: flex;
-  font-family: 'Bungee', cursive;
-  
+  flex-direction: row;
+  justify-content: space-between;
+  font-family: 'Bungee', cursive; 
+}
+
+article {
+  display: flex;
+  width: 800px;
+  height: auto;
+  margin-top: 50px;
+  padding: 15px;
+  border: 1px solid rgba(7, 7, 7, 0.918);
+  outline: 0;
+  background-color: #f4f1ec;
+  flex-direction: column;
+  font-family:Source Sans Pro;
+  font-weight: 300;
   }
+
+  article:hover {
+    box-shadow: 8px 8px rgb(105, 125, 214);
+  }
+article.tweet header {
+  height: 70px;
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-between;
+  align-items: center; 
+}
+
+.userLogo {
+  display: flex;
+  flex-direction:row;
+  align-items: center;
+  gap: 5px;
+  
+} 
+.avatar {
+  display: flex;
+  height: 45px;
+  width: 45px
+}
+.account {
+  font-weight: 600;
+  opacity: 0.5;
+  color: rgb(81, 140, 177);
+}
+.content {
+  border-bottom: 1px solid rgba(7, 7, 7, 0.918);
+  padding: 5px;
+  
+ }
+article.tweet footer {
+  font-size: 18px;
+  height: 30px;
+  margin-top: 5px;
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-between;
+ 
+ 
+} 
+.fa-user-tie {
+  display: flex;
+  color: gray;
+  font-size: 45px;
+}
+.icons {
+  display: flex;
+  flex-direction: row;
+  gap: 5px
+
+}
+
+.fa-flag {
+  color: #005bdb; 
+}
+
+.fa-retweet{
+  color: #005bdb; 
+}
+
+.fa-heart{
+  color: #005bdb; 
+}
+.fa-flag:hover {
+  color: #b6ab15; 
+}
+
+.fa-retweet:hover {
+  color: #b6ab15; 
+}
+
+.fa-heart:hover {
+  color:#b6ab15; 
+}
