--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -9,7 +9,7 @@ textarea {
   border: 0;
   background: transparent;
   width: 800px;
-  height: 60px;
+  height: auto;
   padding: 15px;
   border-bottom: 1px solid rgba(7, 7, 7, 0.918);
   outline: 0;
@@ -81,6 +81,7 @@ article.tweet header {
 .content {
   border-bottom: 1px solid rgba(7, 7, 7, 0.918);
   padding: 5px;
+  word-wrap: break-word;
 }
 
 article.tweet footer {
